--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </div>
 <!-- button, input, select, modal, tooltip -->
       <div class="menuCategory">
-        <div class="menuTitle">Components</div>
+        <div class="menuTitle">Forms</div>
 
         <div class="menuItem">
           <span onclick="navigate('ui-button')" data-page="ui-button">
