--- a/pages/ui-switch.html
+++ b/pages/ui-switch.html
@@ -47,13 +47,23 @@
     </code>
   </div>
 
-  <span>Disabled button.</span>
+  <span>Disabled.</span>
   <div class="example">
     <div class="preview">
-      <ui-switch label="Button" disabled></ui-switch>
+      <ui-switch disabled></ui-switch>
     </div>
     <code>
-      <span>&lt;ui-switch label="Button" disabled&gt;&lt;/ui-switch&gt;</span>
+      <span>&lt;ui-switch disabled&gt;&lt;/ui-switch&gt;</span>
+    </code>
+  </div>
+
+  <span>Switch with Label.</span>
+  <div class="example">
+    <div class="preview">
+      <ui-switch label="Switch Label"></ui-switch>
+    </div>
+    <code>
+      <span>&lt;ui-switch label="Switch Label"&gt;&lt;/ui-switch&gt;</span>
     </code>
   </div>
 
