--- a/pages/ui-button.html
+++ b/pages/ui-button.html
@@ -18,11 +18,16 @@
   <div class="info">
     <h3>Attributes</h3>
     <ul>
-      <li>label - reactive, optional. Continuous string. (nowrap)</li>
-      <li>aria-label - static, required. This attribute is added automatically for buttons with a label attribute and you can override it manually. For icon-only buttons, it must be set manually.</li>
-      <li>icon-leading and icon-trailing - reactive, optional. Define the icon displayed before and after the text.</li>
-      <li>height - static, optional. Button height (number). Default: 32, measured in pixels. Recommended: 24 to 40. Even numbers are preferable.</li>
-      <li>disabled - reactive, optional. Controls whether the component is enabled or disabled.</li>
+      <li>label - reactive, optional.
+        <br>Continuous string. (nowrap)</li>
+      <li>aria-label - static, required.
+        <br>This attribute is added automatically for buttons with a label attribute and you can override it manually. If there is no label, the aria-label must be set manually.</li>
+      <li>icon-leading and icon-trailing - reactive, optional.
+        <br>Define the icon displayed before and after the label.</li>
+      <li>height - static, optional. Default: 32.
+        <br>Button height (number). Measured in pixels. Recommended: 24 to 40. Even numbers are preferable.</li>
+      <li>disabled - reactive, optional.
+        <br>Controls whether the component is enabled or disabled.</li>
     </ul>
   </div>
 </section>
