--- a/pages/ui-input.html
+++ b/pages/ui-input.html
@@ -16,11 +16,16 @@
     <ul>
       <li>type - static, optional. Default: "text".</li>
       <li>placeholder - static, optional.</li>
-      <li>icon-leading and icon-trailing - reactive, optional. Define the icon names.</li>
-      <li>height - static, optional. Default: 32, measured in pixels. Recommended: 24 to 40 pixels. Even numbers are preferred.</li>
-      <li>clearable - static, optional. Adds a clear button.</li>
-      <li>disabled - reactive, optional. Controls the component's state (enabled/disabled).</li>
-      <li>required - static, optional. Defines whether the input is required or not.</li>
+      <li>icon-leading and icon-trailing - reactive, optional.
+        <br>Define the icon names.</li>
+      <li>height - static, optional. Default: 32.
+        <br>Input height (number). Measured in pixels. Recommended: 24 to 40. Even numbers are preferable.</li>
+      <li>clearable - static, optional.
+        <br>Adds a clear button.</li>
+      <li>disabled - reactive, optional.
+        <br>Controls the component's state (enabled/disabled).</li>
+      <li>required - static, optional.
+        <br>Defines whether the input is required or not.</li>
     </ul>
   </div>
 </section>
