--- a/pages/ui-switch.html
+++ b/pages/ui-switch.html
@@ -67,10 +67,10 @@
   <span>Switch with Label.</span>
   <div class="example">
     <div class="preview">
-      <ui-switch aria-label="Switch Label"></ui-switch>
+      <ui-switch label="Label"></ui-switch>
     </div>
     <code>
-      <span>&lt;ui-switch label="Switch Label"&gt;&lt;/ui-switch&gt;</span>
+      <span>&lt;ui-switch label="Label"&gt;&lt;/ui-switch&gt;</span>
     </code>
   </div>
 
