--- a/pages/ui-button.html
+++ b/pages/ui-button.html
@@ -6,6 +6,7 @@
     <h2>Features</h2>
     <ul>
       <li>Supports LTR and RTL.</li>
+      <li>The aria-disabled attribute is added automatically for accessibility.</li>
       <li>At least one of these attributes is required to create a button: label, icon-leading, or icon-trailing.</li>
       <li>For a button with a single icon, use either icon-leading or icon-trailing.</li>
       <li>Font size is "button height / 2 - 2px", capped between 12px and 16px.</li>
@@ -27,7 +28,7 @@
       <li>height - static, optional. Default: 32.
         <br>Button height (number). Measured in pixels. Recommended: 24 to 40. Even numbers are preferable.</li>
       <li>disabled - reactive, optional.
-        <br>Controls whether the component is enabled or disabled.</li>
+        <br>Controls the disabled state of the component.</li>
     </ul>
   </div>
 </section>
