--- a/pages/ui-switch.html
+++ b/pages/ui-switch.html
@@ -6,7 +6,7 @@
     <h2>Features</h2>
     <ul>
       <li>Supports LTR and RTL.</li>
-      <li>Accessible elements like aria-checked and aria-disabled are added automatically.</li>
+      <li>The aria-disabled and aria-checked attributes are added automatically for accessibility.</li>
     </ul>
   </div>
   <div class="info">
