--- a/pages/ui-switch.html
+++ b/pages/ui-switch.html
@@ -7,6 +7,8 @@
     <ul>
       <li>Supports LTR and RTL.</li>
       <li>The aria-disabled and aria-checked attributes are added automatically for accessibility.</li>
+      <li>A visible outline appears on focused buttons.</li>
+      <li>Supports keyboard navigation: Tab to move, Enter/Space to trigger action.</li>
     </ul>
   </div>
   <div class="info">
