--- a/pages/ui-input.html
+++ b/pages/ui-input.html
@@ -17,13 +17,13 @@
       <li>type - static, optional. Default: "text".</li>
       <li>placeholder - static, optional.</li>
       <li>icon-leading and icon-trailing - reactive, optional.
-        <br>Define the icon names.</li>
+        <br>Define the icons displayed before and after the input field, respectively.</li>
       <li>height - static, optional. Default: 32.
         <br>Input height (number). Measured in pixels. Recommended: 24 to 40. Even numbers are preferable.</li>
       <li>clearable - static, optional.
         <br>Adds a clear button.</li>
       <li>disabled - reactive, optional.
-        <br>Controls the component's state (enabled/disabled).</li>
+        <br>Controls the disabled state of the component.</li>
       <li>required - static, optional.
         <br>Defines whether the input is required or not.</li>
     </ul>
