--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
         </div>
 
         <div class="menuItem">
+          <span onclick="navigate('ui-checkbox')" data-page="ui-switch">
+            Checkbox
+          </span>
+        </div>
+
+        <div class="menuItem">
           <span onclick="navigate('ui-input')" data-page="ui-input">
             Input
           </span>
