--- a/pages/ui-icon.html
+++ b/pages/ui-icon.html
@@ -45,5 +45,5 @@
   }
 
   function changeIconName(){
-    changeIconAttribute('icon',['search','send','gear']);}
+    changeIconAttribute('icon',['search','article','settings']);}
 </script>
