--- a/pages/ui-icons.html
+++ b/pages/ui-icons.html
@@ -12,7 +12,7 @@
 </section>
 
 <section class="content icons-pack">
-  <span>Size: 20 x 20</span>
+  <span>Size: 24 x 24</span>
   <div class="example">
     <div class="preview"></div>
   </div>
@@ -20,7 +20,9 @@
 
 <script>
   requestAnimationFrame(()=>{
-    const icons = ['home','article','search','send','bell','gear','cancel'];
+    const icons = [
+      'home','article','search','send','notifications','settings','cancel','check-box','check-circle'
+    ];
 
     const container = document.querySelector('.content .preview');
 
