--- a/pages/ui-input.html
+++ b/pages/ui-input.html
@@ -19,7 +19,7 @@
       <li>icon-leading and icon-trailing - reactive, optional.
         <br>Define the icons displayed before and after the input field, respectively.</li>
       <li>height - static, optional. Default: 32.
-        <br>Input height (number). Measured in pixels. Recommended: 24 to 40. Even numbers are preferable.</li>
+        <br>Component height is measured in pixels. Recommended range: 24 to 40. Even values are preferred.</li>
       <li>clearable - static, optional.
         <br>Adds a clear button.</li>
       <li>disabled - reactive, optional.
