--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
 
         <div class="menuItem">
-          <span onclick="navigate('ui-checkbox')" data-page="ui-switch">
+          <span onclick="navigate('ui-checkbox')" data-page="ui-checkbox">
             Checkbox
           </span>
         </div>
