--- a/pages/ui-button.html
+++ b/pages/ui-button.html
@@ -40,13 +40,27 @@
   <div class="example">
     <div class="preview">
       <ui-button label="shape=&quot;rounded&quot;"></ui-button>
-      <ui-button shape="pill" label="shape=&quot;pill&quot;"></ui-button>
-      <ui-button shape="square" label="shape=&quot;square&quot;"></ui-button>
+      <ui-button label="shape=&quot;pill&quot;" shape="pill"></ui-button>
+      <ui-button label="shape=&quot;square&quot;" shape="square"></ui-button>
     </div>
     <code>
       <span>&lt;ui-button label="rounded"&gt;&lt;/ui-button&gt;</span>
-      <span>&lt;ui-button shape="pill" label="pill"&gt;&lt;/ui-button&gt;</span>
-      <span>&lt;ui-button shape="square" label="square"&gt;&lt;/ui-button&gt;</span>
+      <span>&lt;ui-button label="pill" shape="pill"&gt;&lt;/ui-button&gt;</span>
+      <span>&lt;ui-button label="square" shape="square" &gt;&lt;/ui-button&gt;</span>
+    </code>
+  </div>
+
+  <span>Height 24.</span>
+  <div class="example">
+    <div class="preview">
+      <ui-button height="24" icon-leading="settings" aria-label="Settings"></ui-button>
+      <ui-button height="24" label="Settings"></ui-button>
+      <ui-button height="24" icon-leading="settings" label="Settings"></ui-button>
+    </div>
+    <code>
+      <span>&lt;ui-button height="24" icon-leading="settings" aria-label="Settings"&gt;&lt;/ui-button&gt;</span>
+      <span>&lt;ui-button height="24" label="Settings"&gt;&lt;/ui-button&gt;</span>
+      <span>&lt;ui-button height="24" icon-leading="settings" label="Settings"&gt;&lt;/ui-button&gt;</span>
     </code>
   </div>
 
@@ -73,8 +87,8 @@
     </div>
     <code>
       <span>&lt;ui-button height="40" icon-leading="settings" aria-label="Settings"&gt;&lt;/ui-button&gt;</span>
-      <span>&lt;ui-button height="40" label="Settings" height="40"&gt;&lt;/ui-button&gt;</span>
-      <span>&lt;ui-button height="40" icon-leading="settings" label="Settings" height="40"&gt;&lt;/ui-button&gt;</span>
+      <span>&lt;ui-button height="40" label="Settings"&gt;&lt;/ui-button&gt;</span>
+      <span>&lt;ui-button height="40" icon-leading="settings" label="Settings"&gt;&lt;/ui-button&gt;</span>
     </code>
   </div>
 
